# Drone

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  Proposed_Folder_Schema.txt  README.Docker.md  README.md  compose.prod.yaml  compose.yaml  final_cost.csv  folder.txt
.github/: dependabot.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  package-lock.json  package.json  server.js
cpp_engine/: CMakeLists.txt
cpp_engine/include/: Config.h  DroneDatabase.h  FastMath.h  States.h  Threats.h
cpp_engine/src/: CSVLoader.cpp  FieldGenerator.cpp  main.cpp
data/: env.csv  nfz.csv  script.py  sensor.csv  terrain_height.csv  terrain_type.csv
docs/: .gitkeep  architecture.md  route_api_matrix.md  run-flow.md  security_checklist.md  swarm-study.md  testing.md
env_generator/: main.py  requirements.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
include/: CSVLoader.h  Config.h  FieldGenerator.h  States.h
project/: main.py  test.py
radar_network/: config.py  exporter.py  layer_builder.py  main.py  placement_engine.py  requirements.txt  sensor_map.json  sensor_types.py  terrain.json  terrain_generator.py  terrain_loader.py  terraingeneration.py  test_noise.py  visualization.py
scripts/: run_all.ps1  run_all.sh
src/: CSVLoader.cpp  FieldGenerator.cpp  main.cpp
swarm_monte_carlo/: README.md  __init__.py  scenario.example.json  swarm_simulator.py
terrain_generator/: terraingeneration.py
(+122 files in other folders)
